quick fix to tabs responsiveness
to be followed

--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -18,6 +18,11 @@
   & form
     margin-top -1.6rem
 
+@media (max-width: 800px)
+  .custom-tabs-container
+    flex-direction row !important
+    overflow-x auto
+
 @media (max-width: 960px)
   .graph, .two-graphs, .custom-tabs-container
     margin 0 -2rem 0 -2rem
